--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "test",
+  "name": "personaml-trainer-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --project tsconfig.server.json server/server.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,8 +16,17 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
+    "nodemon": "^2.0.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
