--- a/package.json
+++ b/package.json
@@ -10,21 +10,37 @@
     "vercel-deploy": "next built && next export"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@fullcalendar/common": "^5.11.4",
+    "@fullcalendar/core": "^6.1.4",
+    "@fullcalendar/daygrid": "^6.1.4",
+    "@fullcalendar/interaction": "^6.1.4",
+    "@fullcalendar/react": "^6.1.4",
+    "@fullcalendar/timegrid": "^6.1.4",
     "@heroicons/react": "^2.0.16",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.6",
+    "@prisma/client": "^4.11.0",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "css-loader": "^6.7.3",
     "daisyui": "^2.50.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "fullcalendar": "^6.1.4",
+    "moment": "^2.29.4",
     "next": "13.1.6",
-    "next-auth": "^4.19.2",
+    "next-auth": "^4.20.1",
+    "next-transpile-modules": "^10.0.0",
+    "node-sass": "^7.0.3",
     "nodemon": "^2.0.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass-loader": "^13.2.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
+    "style-loader": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   },
@@ -32,6 +48,7 @@
     "@types/express": "^4.17.17",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.4"
   }
 }
