add bottom nav bar

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/common": "^5.11.4",
     "@fullcalendar/core": "^6.1.4",
     "@fullcalendar/daygrid": "^6.1.4",
@@ -37,6 +40,7 @@
     "nodemon": "^2.0.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "sass-loader": "^13.2.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
