--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "@types/express": "^4.17.17",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
