--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@fullcalendar/react": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.4",
     "@heroicons/react": "^2.0.16",
+    "@mui/material": "^5.13.4",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.6",
     "@prisma/client": "^4.11.0",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "antd": "^5.7.0",
     "css-loader": "^6.7.3",
     "daisyui": "^2.50.0",
     "eslint": "8.33.0",
@@ -42,6 +44,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.7",
+    "react-toastify": "^9.1.3",
     "sass-loader": "^13.2.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
